--- a/app/src/main/res/layout/activity_comentarios.xml
+++ b/app/src/main/res/layout/activity_comentarios.xml
@@ -39,17 +39,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-        <Button
-            android:id="@+id/btnEncerrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Encerrar Ordem"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/btnCancelar"
-            app:layout_constraintTop_toBottomOf="@+id/btnCadastrarComentario"
-            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/btnCancelar"
@@ -63,6 +52,30 @@
             app:layout_constraintTop_toBottomOf="@+id/btnCadastrarComentario"
             app:layout_constraintVertical_bias="0.0" />
 
+        <Button
+            android:id="@+id/btnEncerrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Encerrar Ordem"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/btnCancelar"
+            app:layout_constraintTop_toBottomOf="@+id/btnCadastrarComentario"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <Button
+            android:id="@+id/btnCompartilhar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Compartilhar por Whatsapp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar"
+            app:layout_constraintVertical_bias="0.0" />
+
         <TextView
             android:id="@+id/textViewCliente"
             android:layout_width="160dp"
@@ -71,7 +84,7 @@
             android:text="Nome do Cliente"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar" />
+            app:layout_constraintTop_toBottomOf="@+id/btnCompartilhar" />
 
         <TextView
             android:id="@+id/textViewClienteDesc"
@@ -92,7 +105,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textViewCliente"
-            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar"
+            app:layout_constraintTop_toBottomOf="@+id/btnCompartilhar"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -116,7 +129,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.489"
             app:layout_constraintStart_toEndOf="@+id/textViewId"
-            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar"
+            app:layout_constraintTop_toBottomOf="@+id/btnCompartilhar"
             tools:ignore="MissingConstraints" />
 
         <TextView
